# filter_evaluation

./: .gitignore  README.md
src/: CMakeLists.txt  evaluation.cpp
src/filter/: CMakeLists.txt
src/filter/bloom/: bloom.h
src/filter/vector_quotient_filter/: vqf_cpp.h  vqf_filter.cpp
src/sql/: init.ddl  insert_data.sql
